补齐车辆管理端控制台